--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,58 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* end of css reset */
+
+body {
+  background-color: #0E0514;
+opacity: 1;
+background-image: radial-gradient(#271732 0.8500000000000001px, #0E0514 0.8500000000000001px);
+background-size: 17px 17px;
+  width: 100%;
+  height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  gap: 2rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+.gif-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  width: 450px;
+  height: 450px;
+  border: 5px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(0deg,rgba(82, 0, 103, 1) 0%, rgba(246, 83, 98, 1) 100%);
+}
+
+img {
+  max-height: 100%;
+}
+
+.refresh-btn {
+  position: absolute;
+  background: #873097;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 2.5rem;
+  aspect-ratio: 1;
+  padding: 0.4rem;
+  bottom: 1rem;
+  right: 1rem;
+}
+
