--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ h1, h2, h3, h4, h5, h6 {
 
 /* end of css reset */
 
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
   background-color: #0E0514;
 opacity: 1;
@@ -87,5 +91,38 @@ img {
   padding: 0.4rem;
   bottom: 1rem;
   right: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
 }
 
+.search {
+  display: flex;
+  gap: 1rem;
+  width: 450px;
+  height: 3rem;
+}
+
+.search-btn {
+  height: 100%;
+  aspect-ratio: 1;
+  background: #873097;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.7rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+}
+
+.search-input {
+  flex: 1;
+  color: #222;
+  font-size: 1.2rem;
+  padding: 1rem;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+}
+
+.search-input:focus-visible {
+  outline: none;
+  box-shadow: 0 0 4px 2px #f65362;
+}
